--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ android {
     versionProperties.load(new FileInputStream(file("version.properties")))
 
     def useGooglePlayUploadKeysProperties = true
+    // def useGooglePlayUploadKeysProperties = false // DEBUG
 
     Properties appSigningKeysProperties = new Properties()
     def appSigningKeysPropertiesFile = file("app-signing-release-keys.properties")
@@ -132,9 +133,6 @@ android {
             java.srcDirs = ['srcAndroidTest']
             resources.srcDirs = ['srcAndroidTest']
         }
-
-        debug.setRoot('build-types/debug')
-        release.setRoot('build-types/release')
     }
 
     testOptions {
