--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,22 +1,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="org.mtransit.android.ca_grand_river_transit_light_rail"
-    tools:ignore="MissingVersion" >
+    tools:ignore="MissingVersion">
+
     <application
         android:allowBackup="true"
         android:description="@string/app_desc"
         android:icon="@mipmap/module_app_icon"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        tools:ignore="GoogleAppIndexingWarning"
-        tools:targetApi="30">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        tools:targetApi="${target_sdk_version}">
         <!-- GTFS ROUTE TRIP STOP & SCHEDULE PROVIDER -->
         <provider
             android:name="org.mtransit.android.commons.provider.GTFSProvider"
             android:authorities="@string/gtfs_rts_authority"
             android:exported="true"
             android:readPermission="${permission_provider_read}"
-            tools:ignore="MissingRegistered" >
+            tools:ignore="MissingRegistered">
             <meta-data
                 android:name="@string/agency_provider"
                 android:value="@string/agency_provider" />
@@ -48,7 +49,7 @@
             android:authorities="@string/grand_river_transit_authority"
             android:exported="true"
             android:readPermission="${permission_provider_read}"
-            tools:ignore="MissingRegistered" >
+            tools:ignore="MissingRegistered">
             <meta-data
                 android:name="@string/status_provider"
                 android:value="@string/status_provider" />
@@ -62,7 +63,7 @@
             android:authorities="@string/twitter_authority"
             android:exported="true"
             android:readPermission="${permission_provider_read}"
-            tools:ignore="MissingRegistered" >
+            tools:ignore="MissingRegistered">
             <meta-data
                 android:name="@string/news_provider"
                 android:value="@string/news_provider" />
@@ -76,7 +77,7 @@
             android:authorities="@string/rss_authority"
             android:exported="true"
             android:readPermission="${permission_provider_read}"
-            tools:ignore="MissingRegistered" >
+            tools:ignore="MissingRegistered">
             <meta-data
                 android:name="@string/news_provider"
                 android:value="@string/news_provider" />
@@ -90,7 +91,7 @@
             android:authorities="@string/youtube_authority"
             android:exported="true"
             android:readPermission="${permission_provider_read}"
-            tools:ignore="MissingRegistered" >
+            tools:ignore="MissingRegistered">
             <meta-data
                 android:name="@string/news_provider"
                 android:value="@string/news_provider" />
