--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -69,8 +69,8 @@
                 android:name="@string/status_provider_target"
                 android:value="@string/grand_river_transit_status_for_poi_authority" />
         </provider>
-        <!-- -->
         <!-- TWITTER NEWS PROVIDER -->
+        <!-- RSS available
         <provider
             android:name="org.mtransit.android.commons.provider.TwitterNewsProvider"
             android:authorities="@string/twitter_authority"
@@ -84,6 +84,7 @@
                 android:name="@string/news_provider_target"
                 android:value="@string/twitter_target_for_poi_authority" />
         </provider>
+        -->
         <!-- RSS NEWS PROVIDER -->
         <provider
             android:name="org.mtransit.android.commons.provider.RSSNewsProvider"
